# jxconfig

./: README.md  pyproject.toml
jxconfig/: __init__.py  core.py
tests/: test_core.py
