[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jxconfig"
version = "0.1.0"
description = "JX — JSON eXtended: a minimal JSON-compatible config language with comments, trailing commas, and expressions"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "KrisTHL181" }]
keywords = ["json", "config", "configuration", "preprocessor", "expressions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/KrisTHL181/jxconfig"
Repository = "https://github.com/KrisTHL181/jxconfig"
Issues = "https://github.com/KrisTHL181/jxconfig/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["jxconfig*"]

[tool.setuptools.package-data]
jxconfig = ["py.typed"]
